- [PATCH] Fixes deprecated PackageInfo.signatures (#1587)
- [PATCH] Deprecated ADAL namespaced AuthenticationSettings#setSecretKey(), #getSecretKey() (#1586)
- [PATCH] Disregard pageload errors for the non-primary frame during interactive auth (#1603)
- [PATCH] Updates Nimbus version 8.2 -> 9.9 (#1600)
- [PATCH] Fix for ADAL cache replication to Msal/Common-Cache (#1616)

Version 3.1.3
-------------
- Adds exception handling for ADAL cache crash on malformed JSON (#1606)
- Implements a fix for ADAL cache replication (#1616)

Version 3.1.2
-------------
- Android changes for SDK30, see [the android developers notice](https://android-developers.googleblog.com/2020/07/preparing-your-build-for-package-visibility-in-android-11.html).
- Updates common dependency to 3.0.6
    * Provides Android 11 support fixes; see common@3.0.6 changelog for details.

Version 3.1.1
-------------
- Fix ADAL/1073 - Explicitly disable Content Provider access from WebViews
- Fix ADAL/1074 - Set WebSettings#setAllowFileAccess(false)
- Fix ADAL/1354 - Close FileInputStream in getVersionProps in version_tasks.gradle
- Clear the MSAL cache replica if the ADAL cache is cleared

Version 3.1.0
-------------
- Save tokens in cache for AcquireTokenByRefreshToken API (if resource and openid scope provided)
- Changes to acquire token via SAML assertion

Version 3.0.2
-------------
- Returns idToken with a silent broker response (msal#997)

Version 3.0.1
-------------
- Adding dual screen support for Surface Duo.
  * Please exclude classes under "com.microsoft.device.display" in your proguard file.
  * For apps that would like to include their own copy of Surface Duo SDK, please exclude the SDK inside ADAL as follows.
    implementation ("com.microsoft.aad:adal:3.0.1") {
        exclude group: 'com.microsoft.device.display'
    }
- Return ADALError.MDM_REQUIRED after the user interacts with MDM link.
- Adds support for multiple IdToken lookups in a single call when dual stacking with FoCi (common#871)
